--- a/TakeFive/public/stylesheets/lobby.scss
+++ b/TakeFive/public/stylesheets/lobby.scss
@@ -24,9 +24,10 @@ body {
     justify-content: center;
     align-items: center;
     padding: 10px;
-    gap: 10px;
+    padding-bottom: 0px;
     a {
         width: 100%;
+        margin-bottom: 10px;
     }
     span {
         font-weight: bold;
